--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,1 +1,16 @@
 $body_color: var(--body_color);
+$text_color: var(--text_color);
+$btn_text_color: var(--btn_text_color);
+$btn_bg_color: var(--btn_bg_color);
+$img_text_color:var(--img_text_color);
+$alignment:var(--alignment);
+
+/* Fonts */
+$header_font:var(--header_font);
+$paragraph_font:var(--paragraph_font);
+$footer_font:var(--footer_font);
+$banner_font:var(--banner_font);
+$slider_font:var(--slider_font);
+$font_size:var(--font_size);
+$align:var(--align);
+
