--- a/theme/sections/Gallery.liquid
+++ b/theme/sections/Gallery.liquid
@@ -21,7 +21,7 @@
 </div>
 {% schema %}
   {
-    "name": "Gallery Section",
+    "name": "Gallery",
     "settings": [
       {
 		"id":"gallery-img1",
