--- a/theme/sections/Photogallery.liquid
+++ b/theme/sections/Photogallery.liquid
@@ -19,7 +19,7 @@
   
   {% schema %}
     {
-      "name":"image-gallery",
+      "name":"GridGallery",
       "settings": [
       {
         "type": "image_picker",
@@ -35,15 +35,15 @@
             {
               "id": "image",
               "type": "image_picker",
-              "label": "Images"
+              "label": "Grid Images"
             }
           ]
         }
       ],
       "presets": [
       {
-        "category": "Photogalley",
-        "name": "Photogallery"
+        "category": "GridGallery",
+        "name": "GridGallery"
       }
       
     ]
