--- a/theme/sections/Slider.liquid
+++ b/theme/sections/Slider.liquid
@@ -1,8 +1,8 @@
 
 <div class="slider-wrapper">
   <div class="slider-lefttext">
-    <h1>Just For You</h1>
-    <p>Styles that we think you'll love</p>
+    <p class="title">Just For You</p>
+    <p class="subtitle">Sed ut perspiciatis unde omnis <br>iste natus error sit</p>
     <button class="shop-btn">SHOP NOW<i class="arrow right"></i></button>
   </div>
   <div class="imgslider">
@@ -27,7 +27,7 @@
 
 {% schema %}
 {
-  "name": "slider-section",
+  "name": "Slider",
   "settings": [
     {
       "type": "image_picker",
