--- a/theme/sections/footer.liquid
+++ b/theme/sections/footer.liquid
@@ -2,7 +2,7 @@
  <div class="footer-sec">
     <div class="contactus">
         <div>
-            <h1>Contact Us</h1>
+            <p class="title">Contact Us</p>
             <p><span class="detailtitle">EMAIL </span> support@karenkane.zendesk.com</p>
             <p><span class="detailtitle">PHONE</span> 855-655-8974</p>
         </div>
@@ -10,7 +10,7 @@
             <p><span class="detailtitle">CUSTOMER SERVICE  HOURS</span></p>
             <p>M-F from 8am-5pm PST</p>
          </div>
-        <div>
+        <div class="shop">
             <button class="shop-btn">Join Our Newsletter</button>
         </div>
     </div>
@@ -38,11 +38,11 @@
     </div>
     <div class="servicelogo">
         <div>
-          <img src="{{ section.settings.fb_icon | img_url:'master' }}" alt="Facebook">
-          <img src="{{ section.settings.twitter_icon | img_url:'master' }}" alt="Facebook">
-          <img src="{{ section.settings.pinterest_icon | img_url:'master' }}" alt="Facebook">
-          <img src="{{ section.settings.tumblr_icon | img_url:'master' }}" alt="Facebook">
-          <img src="{{ section.settings.instagram_icon | img_url:'master' }}" alt="Facebook">
+          <a href="#"><img src="{{ section.settings.fb_icon | img_url:'master' }}" alt="Facebook"></a>
+          <a href="#"><img src="{{ section.settings.twitter_icon | img_url:'master' }}" alt="Twitter"></a>
+          <a href="#"><img src="{{ section.settings.pinterest_icon | img_url:'master' }}" alt="Pintrest"></a>
+          <a href="#"><img src="{{ section.settings.tumblr_icon | img_url:'master' }}" alt="tumblr"></a>
+          <a href="#"><img src="{{ section.settings.instagram_icon | img_url:'master' }}" alt="Instagram"></a>
         </div>
         <div class="copyright">@2019 Karen kane. All right reserved</div>
     </div>
