--- a/scss/_img-gallery.scss
+++ b/scss/_img-gallery.scss
@@ -1,6 +1,6 @@
 .image-gallery-wrapper {
   width: 100%;
-  padding: 85px 0px;
+  padding: 150px 0px;
   background: #fdfaf8;
 }
 .gallery-container {
@@ -31,20 +31,20 @@
 }
 .gallery-text {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 .gallery-text h1 {
-  color: #2e2e2e;
-  margin-bottom: 10px;
+  color:$text_color;
   font-weight: 100;
   font-size: 35px;
 }
 // shop btn //
 .shop-btn {
   border: none;
-  font-size: 10px;
-  color: #636262;
+  font-size: 13px;
+  color:$body_color;
   background: none;
+  padding: 10px 10px;
 }
 .shop-btn .arrow {
   border: solid #636262;
