--- a/scss/_videoplay.scss
+++ b/scss/_videoplay.scss
@@ -3,19 +3,20 @@
   position: relative;
   img {
     width: 100%;
-    height: 1100px;
   }
   .playbtn {
     position: absolute;
     color: white;
     border: 1px solid white;
     border-radius: 50%;
-    top: 50%;
-    left: 45%;
-    padding: 50px 50px;
+    top: 45%;
+    left: 46%;
+    width: 110px;
+    height: 110px;
+    line-height: 120px;
     text-align: center;
   }
-}
+
 /* Text-overlay */
 
 .textoverlay-text {
@@ -23,43 +24,59 @@
   top: 40%;
   right: 8%;
   text-align: end;
-  color: #ffffff;
+  color: $img_text_color;
 
-  h1 {
-    font-size: 47px;
+  .title{
+    font-size: 40px;
+    font-weight: 1000;
+  }
+  .subtitle
+  {
+    margin-top: 12px;
+    letter-spacing: 1.0px;
+    margin-bottom: 35px;
   }
   p {
-    margin: 15px 0px 30px 0px;
+    margin: 20px 10px 10px 0px;
   }
   a {
-    padding: 12px 25px;
-    color: #5e5e5e;
-    font-size: 12px;
+    padding: 15px 40px;
+    color: $btn_text_color;
+    font-size: 13px;
     font-weight: 600;
     border: none;
-    background: #ffffff;
+    background: $btn_bg_color;
     text-decoration: none;
+    margin-right: 6px;
+  }
+  .playbtn{
+    margin-top: 20px;
   }
 }
+}
 @media (max-width: 767px) {
-  .videoplay-wrapper .textoverlay-text {
-    position: static;
-
+  .videoplay-wrapper {
     img {
-      height: 400px;
+      height:auto;
+      width: 100%;
     }
     .playbtn {
       padding: 25px 25px;
-      top: 40%;
-      left: 45%;
+      top: 25%;
+      left: 40%;
     }
 
     .textoverlay-text {
+      text-align: center;
+      position: static;
       margin-top: 10px;
+      margin-bottom: 10px;
       h1 {
+        font-size: 24px;
         color: black;
       }
       p {
+        font-size: 14px;
         color: black;
       }
       a {
