--- a/theme/sections/navbar.liquid
+++ b/theme/sections/navbar.liquid
@@ -1,6 +1,8 @@
 <div class="navbar-wrapper">
    <div class="navbar_icon">
-    <a href="#"> <img class="navbar-image" src="{{ section.settings.navbar_icon |  img_url: '50x50' }}" alt="{{section.settings.navbar_icon}}"></a>
+    <a href="#"> 
+      <img class="navbar-image" src="{{ section.settings.navbar_icon |  img_url: '50x50' }}" alt="{{section.settings.navbar_icon}}">
+    </a>
     <a href="#"><img class="cancel-icon" src="{{ section.settings.cancel | img_url: 'icon' }}" alt="{{ "cancel icon" }}" /></a>
     <div class="main-nav">
       <ul class="navbar-menu-list">
@@ -25,12 +27,10 @@
         </ul>
     </div>
   </div>
-  <!-- <div class="cross-icon">
-    <a href="#"> <img src="{{ section.settings.cancel-icon | img_url:'compact' }}" alt="{{section.settings.cross_icon}}"></a>
-  </div> -->
+
 <!--   logo -->
   <div class="navbar-logo sidespace">
-    <a href="#"> <img src="{{ section.settings.logo | img_url:'compact' }}" alt="{{section.settings.logo}}"></a>
+    <a href="/"> <img src="{{ section.settings.logo | img_url:'compact' }}" alt="{{section.settings.logo}}"></a>
   </div>
 
 <!--   Middle menu -->
@@ -68,16 +68,19 @@
 <!--   right icons -->
   <div class="navbar-icon sidespace">
          <div class="search-icons icons">
-            <img class="search-image" src="{{ section.settings.search-icon |  img_url: '16x16' }}" alt="{{section.settings.search-icon}}">
+          
+              {%- render 'icon-search' -%} 
+            
         </div>
     	<div class="user-icon icons">
-           <img class="search-image" src="{{ section.settings.user-icon | img_url: '16x16' }}" alt="{{ section.settings.user-icon }}">
+        {%- render 'icon-user' -%} 
           </div>
     		<div class="mail-icon icons">
-           <img class="search-image" src="{{ section.settings.email-icon | img_url: '16x16' }}" alt="{{ section.settings.user-icon }}">
+          
+          {%- render 'icon-mail' -%} 
           </div>
           <div class="wishlist-icon icons">
-            <img class="search-image" src="{{ section.settings.wishlist-icon | img_url: '16x16' }}" alt="{{ section.settings.wishlist-icon }}">
+            {%- render 'icon-wishlist' -%} 
           </div>
     	  <div class="mybag icons">
             My Bag 0
@@ -90,64 +93,39 @@
 
 {% schema %}
 {
-	"name":"navbar",
-	"settings":[
-	{
-		"id":"logo",
-		"type":"image_picker",
-		"label":"Logo-img"
-	},
-	 {
-        "type": "image_picker",
-        "id": "search-icon",
-        "label": "Search-Image"
-      },
-      {
-        "type": "image_picker",
-        "id": "user-icon",
-        "label": "User-Image"
-      },
-      {
-        "type": "image_picker",
-        "id": "email-icon",
-        "label": "Email-Image"
-      },
-      {
-        "type": "image_picker",
-        "id": "wishlist-icon",
-        "label": "Heart-Image"
-      },
-	  {
-        "type": "image_picker",
-        "id": "menu-sideimg",
-        "label": "Menu-SideImage"
-      },
-  		{
-        "type": "image_picker",
-        "id": "cancel",
-        "label": "Cancel"
-      },
-  	  {
-        "type": "image_picker",
-        "id": "search",
-        "label": "Search"
-      },
-	 {
-        "type": "image_picker",
-        "id": "navbar_icon",
-        "label": "Navbar Ico"
-      },
-		 {
-        "type": "image_picker",
-        "id": "cart_bag",
-        "label": "Cart Bag Icon"
-      }
-      ],
-      "presets": [
-          {
-            "category": "Navbar",
-            "name": "menu"
-          }
-        ] 
-      }
+  "name": "Header",
+  "settings": [
+    {
+      "id": "logo",
+      "type": "image_picker",
+      "label": "Logo"
+    },
+    {
+      "type": "image_picker",
+      "id": "menu-sideimg",
+      "label": "Menu-SideImage"
+    },
+    {
+      "type": "image_picker",
+      "id": "cancel",
+      "label": "Cancel"
+    },
+    {
+      "type": "image_picker",
+      "id": "search",
+      "label": "Search"
+    },
+    {
+      "type": "image_picker",
+      "id": "navbar_icon",
+      "label": "Navbar Ico"
+    },
+    {
+      "type": "image_picker",
+      "id": "cart_bag",
+      "label": "Cart Bag Icon"
+    }
+  ]
+}
+
 {% endschema %}
